--- a/application/app/src/main/res/xml/network_security_config.xml
+++ b/application/app/src/main/res/xml/network_security_config.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-  
-</PreferenceScreen>
+<network-security-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <domain>ec2-18-136-120-44.ap-southeast-1.compute.amazonaws.com</domain>
+    </domain-config>
+</network-security-config>
